<resources>
    <string name="note1">Rol</string>
    <string name="note2">Accion</string>
    <string name="note3">Aventura</string>
    <string name="note4">Terror</string>
    <string name="note5">Deportes</string>
    <string name="note6">Estrategia</string>

    <string name="aboutName1">Ruben</string>
    <string name="aboutName2">Jorge</string>
    <string name="aboutName3">Tono</string>
    <string name="aboutName4">Victor</string>
    <string name="aboutName5">Xavier</string>
    <string name="aboutName6">Pablo</string>
    <string name="aboutName7">Luca</string>
    <string name="aboutName8">Ruben</string>



    <string name="app_name">DI_Practica1_PlayJuegos</string>
    <string name="play_juegos">Play Juegos</string>
    <string name="play">Play</string>
    <string name="new_player">New Player</string>
    <string name="preferences">PREFERENCES</string>
    <string name="about">About</string>
    <string name="nickname">Nickname</string>
    <string name="phonetic_name">Phonetic name</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="change">Change</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="action_genero">Genero</string>
    <string name="action_search">Search</string>
    <string name="action_add">add</string>
    <string name="elige_una_opcion">Elige una opcion:</string>
    <string name="radiant_defense">Radiant defense</string>
    <string name="angry_birds">Angry Birds</string>
    <string name="hill_climbing_race">Hill climbing race</string>
    <string name="dragon_fly">Dragon fly</string>
    <string name="pocket_soccer">Pocket soccer</string>
    <string name="ninja_jump">Ninja jump</string>
    <string name="air_control">Air control</string>
</resources>