<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    android:stretchColumns="1,2"
    tools:context=".NewPlayer">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imPersonIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:srcCompat="@drawable/ic_person_foreground" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:layout_span="2"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etPhoneticName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_span="2"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/phonetic_name"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_span="2"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imCameraIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:contentDescription="@string/todo"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:srcCompat="@drawable/ic_camera_foreground" />

        <ImageView
            android:id="@+id/imPersonExample"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_gravity="fill_vertical"
            android:contentDescription="@string/todo"
            android:scaleX="1"
            android:scaleY="1"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_span="1"
            android:text="@string/change" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imPhoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:srcCompat="@drawable/ic_phone_foreground" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_span="2"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:minHeight="48dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spnSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imEmailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:srcCompat="@drawable/ic_email_foreground" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_span="2"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />
    </TableRow>
</TableLayout>